[gd_scene load_steps=3 format=3 uid="uid://bkciko41efmse"]

[ext_resource type="PackedScene" uid="uid://deche81a76i5" path="res://gui/gui_card.tscn" id="1_tilm0"]
[ext_resource type="Script" path="res://gui/cards/credits_gui_card.gd" id="2_r7tjm"]

[node name="CreditsGUICard" instance=ExtResource("1_tilm0")]
script = ExtResource("2_r7tjm")

[node name="HeadingLabel" type="Label" parent="VBoxContainer" index="0"]
layout_mode = 2
text = "heading.credits"
horizontal_alignment = 1

[node name="CreditsLabel" type="Label" parent="VBoxContainer" index="1"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer" index="2" groups=["focus"]]
layout_mode = 2
text = "button.continue"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
